--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <script type="module" src="main.tsx"></script>
-    <link rel="stylesheet" href="style.scss">
     <title>Ruancar//o</title>
+
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.scss">
+    <script type="module" src="main.tsx"></script>
+
+    <link rel="icon" href="static/images/rwan-logo.svg" type="image/x-icon">
   </head>
   <body></body>
 </html>
