💥 struc: Desativação temporária do website

--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -4,10 +4,10 @@
     <title>Ruancar//o</title>
 
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.scss">
-    <script type="module" src="main.tsx"></script>
 
     <link rel="icon" href="static/images/rwan-logo.svg" type="image/x-icon">
   </head>
-  <body></body>
+  <body style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100vw; height: 100vh; background-color: black;">
+    <p style="font-size: 5rem ;color: white;">?</p>
+  </body>
 </html>
